--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
     		<artifactId>fastcsv</artifactId>
     		<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
